src/test/06-Errors/error-depend-class-var.txt
error-depend-class-var.ck:7:9: error: class member 'myVal' is used before declaration
[7]     <<< myVal >>>;
            ^
